[package]
name = "test_2022_03_23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
futures = { version = "0.3.17"}
regex = {version = "1.5.5"}
typed-arena = "2.0.1"
# futures = { version = "0.3", default-features = false }